books/projects/rac/tests/yaml_test/program_structure/unterminated-comment.ref.stderr
unterminated-comment.cpp.i:7 (0-2): Unterminated comment
 7 | /*
   | ^^

unterminated-comment.cpp.i:7 (0-2): syntax error, unexpected invalid token
 7 | /*
   | ^^
