books/projects/rac/tests/yaml_test/program_structure/unterminated-comment.cpp.i
// RAC begin

int foo()
{
  return 2;
}
/*
 * asdasd
 *

// RAC end
